# qtpanel

./: CMakeLists.txt  README.md  applet.cpp  applet.h  applicationsmenuapplet.cpp  applicationsmenuapplet.h  clockapplet.cpp  demoapplet.cpp  dockapplet.cpp  dockapplet.h  dpisupport.cpp  panelapplication.cpp  panelapplication.h  panelwindow.cpp  panelwindow.h  textgraphicsitem.cpp  textgraphicsitem.h  trayapplet.cpp  x11support.cpp  x11support.h
